--- a/kms.html
+++ b/kms.html
@@ -1,89 +1,199 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <title>Gastos 2N — KM</title>
-  <link rel="stylesheet" href="assets/style.css"/>
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
-  <script src="assets/app.js"></script>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Gastos 2N — KMs</title>
+<style>
+:root{
+  --bg:#0b0f14;
+  --card:#11161c;
+  --muted:#97a3b6;
+  --accent:#0a84ff;
+  --border:#1b2530;
+  --ok:#30d158;
+  --warn:#ffd60a;
+  --bad:#ff453a;
+  --txt:#e6edf6;
+}
+*{box-sizing:border-box}
+html,body{margin:0;padding:0;font-family:-apple-system,system-ui,Segoe UI,Roboto,Helvetica,Arial;background:var(--bg);color:var(--txt)}
+a{color:var(--accent);text-decoration:none}
+.btn{border:1px solid var(--border);background:linear-gradient(180deg,#17202a,#11161c);
+  color:var(--txt);padding:10px 14px;border-radius:14px;cursor:pointer;transition:.2s;display:inline-flex;align-items:center;gap:8px}
+.btn:active{transform:scale(.98)}
+.btn.primary{background:linear-gradient(180deg,#0a84ff,#0066cc);border:none;color:#fff}
+.btn.ghost{background:transparent}
+.btn.warn{background:linear-gradient(180deg,#ffd60a,#bda107);border:none;color:#1a1a1a}
+.btn.ok{background:linear-gradient(180deg,#30d158,#248a3d);border:none;color:#061307}
+.badge{padding:4px 8px;border-radius:999px;background:#0f1520;border:1px solid var(--border);color:var(--muted);font-size:12px}
+.topbar{position:sticky;top:0;z-index:10;display:flex;gap:8px;align-items:center;padding:12px 14px;background:rgba(11,15,20,.85);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
+.topbar h1{margin:0;font-size:18px;letter-spacing:.3px}
+.container{max-width:920px;margin:0 auto;padding:14px}
+.card{background:var(--card);border:1px solid var(--border);border-radius:18px;padding:14px}
+.grid{display:grid;gap:12px}
+.grid.cols-2{grid-template-columns:1fr 1fr}
+.grid.cols-3{grid-template-columns:1fr 1fr 1fr}
+.row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+.input,select,textarea{width:100%;background:#0e141b;border:1px solid var(--border);border-radius:12px;color:var(--txt);padding:10px;font:inherit}
+label{font-size:12px;color:var(--muted)}
+.mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
+.muted{color:var(--muted)}
+.hidden{display:none!important}
+.list{display:grid;gap:10px}
+.item{display:flex;align-items:center;justify-content:space-between;border:1px solid var(--border);background:#0e141b;border-radius:14px;padding:10px}
+.item .left{min-width:0}
+.item .left p{margin:0}
+.item small{color:var(--muted)}
+.kpi{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
+.kpi .k{background:#0e141b;border:1px solid var(--border);border-radius:16px;padding:12px}
+.kpi .v{font-weight:700;font-size:18px}
+.modal{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;align-items:center;justify-content:center;padding:16px}
+.modal.open{display:flex}
+.sheet{background:var(--card);border:1px solid var(--border);border-radius:20px;max-width:520px;width:100%;overflow:hidden}
+.sheet header,.sheet footer{padding:12px 14px;border-bottom:1px solid var(--border);display:flex;gap:8px;justify-content:space-between;align-items:center}
+.sheet footer{border-top:1px solid var(--border);border-bottom:none}
+.sheet .body{padding:14px;display:grid;gap:10px;grid-template-columns:1fr 1fr}
+.preview{grid-column:1/3;display:flex;gap:10px;align-items:center;border:1px dashed var(--border);padding:10px;border-radius:12px}
+</style>
+
+<!-- Firebase compat SDKs -->
+<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyBTK8altmAR-fWqR9BjE74gEGavuiqk1Bs",
+  authDomain: "gastos-2n.firebaseapp.com",
+  projectId: "gastos-2n",
+  storageBucket: "gastos-2n.firebasestorage.app",
+  messagingSenderId: "55010048795",
+  appId: "1:55010048795:web:4fb48d1e0f9006ebf7b1be"
+};
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
+const storage = firebase.storage();
+</script>
+
 </head>
 <body>
-  <header class="topbar">
-    <h1>KM</h1>
-    <a class="btn" href="index.html">Volver</a>
-    <span class="badge" style="margin-left:auto" id="whoami">...</span>
-  </header>
-  <main class="content">
-    <div class="panel grid2">
-      <div class="field"><label>Fecha</label><input id="d" type="date"/></div>
-      <div class="field"><label>Destino</label><input id="dest" type="text" placeholder="Cliente / Ciudad"/></div>
-      <div class="field"><label>KM Empresa</label><input id="kme" type="number" step="0.1" min="0"/></div>
-      <div class="field"><label>KM Personal</label><input id="kmp" type="number" step="0.1" min="0"/></div>
-      <div class="field"><label>€/L gasolina</label><input id="pl" type="number" step="0.01" min="0"/></div>
-      <div class="field"><label>Foto ticket (opcional)</label><input id="ph" type="file" accept="image/*"/></div>
-      <div class="field"><label>Total KM registro</label><input id="kt" type="number" disabled/></div>
-      <div class="field"><label>Coste personal (kmp × €/L)</label><input id="cp" type="number" disabled/></div>
-      <div style="grid-column:1/3;display:flex;gap:8px"><button id="save" class="btn primary">Guardar</button><button id="clr" class="btn">Limpiar</button></div>
-    </div>
-    <div class="panel">
-      <strong>Últimos registros</strong>
-      <div id="list" class="list"></div>
-    </div>
-  </main>
-  <script>
-  (function(){
-    const {auth,db,st}=App; AfterRedirect(); requireAuth(load);
-    function setToday(){ const t=new Date().toISOString().slice(0,10); d.value=t; }
-    function calc(){ kt.value=(Number(kme.value||0)+Number(kmp.value||0)).toFixed(1); cp.value=(Number(kmp.value||0)*Number(pl.value||0)).toFixed(2); }
-    const d=$id('d'), dest=$id('dest'), kme=$id('kme'), kmp=$id('kmp'), pl=$id('pl'), ph=$id('ph'), kt=$id('kt'), cp=$id('cp');
-    [kme,kmp,pl].forEach(i=>i.oninput=calc);
-    function clear(){ dest.value=''; kme.value=''; kmp.value=''; pl.value=''; ph.value=null; calc(); }
-    $id('clr').onclick=clear;
-    setToday(); calc();
 
-    async function load(u){
-      // list
-      db.collection(`users/${u.uid}/kms`).orderBy('date','desc').limit(20).onSnapshot(snap=>{
-        const el=$id('list'); el.innerHTML='';
-        snap.forEach(doc=>{
-          const r=doc.data();
-          const div=document.createElement('div'); div.className='card';
-          div.innerHTML=`<img src="${r.photoURL||''}" onerror="this.style.display='none'"/>
-            <div><div><strong>${(r.dest||'-')}</strong> <span class="small">${new Date(r.date).toLocaleDateString('es-ES')}</span></div>
-            <div class="small">Emp:${r.kmEmpresa||0} · Per:${r.kmPersonal||0} · €/L:${r.pricePerLitre||0} · CostePers:${r.costPersonal||0}</div></div>`;
-          el.appendChild(div);
-        });
-      });
+<header class="topbar">
+  <h1>Gastos 2N</h1>
+  <span id="whoami" class="badge">No autenticado</span>
+  <span style="flex:1"></span>
+  <a class="btn ghost" href="./index.html">🏠 Inicio</a>
+  <a class="btn ghost" href="./export.html">📁 Export</a>
+  <a class="btn ghost" href="./kms.html">🛣️ KMs</a>
+  <a class="btn ghost" href="./summary.html">📊 Summary</a>
+  <button id="btnLogin" class="btn">🔐 Google</button>
+  <button id="btnLogout" class="btn hidden">Salir</button>
+</header>
+<script>
+  const who = ()=>document.getElementById('whoami');
+  auth.onAuthStateChanged(u=>{
+    if(u){ who().textContent = u.email||u.uid;
+      document.getElementById('btnLogin').classList.add('hidden');
+      document.getElementById('btnLogout').classList.remove('hidden');
+    }else{
+      who().textContent = 'No autenticado';
+      document.getElementById('btnLogin').classList.remove('hidden');
+      document.getElementById('btnLogout').classList.add('hidden');
     }
+  });
+  document.getElementById('btnLogin').onclick = async ()=>{
+    try{ await auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }catch(e){ alert(e.message||'Login error'); }
+  };
+  document.getElementById('btnLogout').onclick = ()=>auth.signOut();
+</script>
 
-    $id('save').onclick = async ()=>{
-      try{
-        const u=auth.currentUser; if(!u) return alert('Login primero');
-        const dateISO=d.value||new Date().toISOString().slice(0,10);
-        let photoURL="", photoPath="";
-        const f=ph.files[0];
-        if(f){
-          const fn=`kms_${dateISO}_${Date.now()}_${f.name.split('.').pop()}`;
-          photoPath=`kms/${u.uid}/${dateISO.slice(0,7)}/${fn}`;
-          await st.ref(photoPath).put(f);
-          photoURL=await st.ref(photoPath).getDownloadURL();
-        }
-        const rec={
-          date:new Date(dateISO), dest:dest.value.trim(),
-          kmEmpresa:Number(kme.value||0), kmPersonal:Number(kmp.value||0),
-          pricePerLitre:Number(pl.value||0), totalKm:Number(kme.value||0)+Number(kmp.value||0),
-          costPersonal:Number(kmp.value||0)*Number(pl.value||0),
-          photoURL, photoPath, createdAt: firebase.firestore.FieldValue.serverTimestamp()
-        };
-        await db.collection(`users/${u.uid}/kms`).add(rec);
-        alert('KM guardado ✅'); clear(); setToday();
-      }catch(e){ alert('Error: '+(e.message||e)); }
-    }
-  })();
-  </script>
+<main class="container grid">
+  <section class="card">
+    <div class="grid cols-2">
+      <div class="field"><label>Fecha</label><input id="kDate" class="input" type="date"/></div>
+      <div class="field"><label>Destino</label><input id="kDest" class="input" type="text" placeholder="Cliente / Ciudad"/></div>
+      <div class="field"><label>KM empresa</label><input id="kEmp" class="input" type="number" step="0.1" min="0"/></div>
+      <div class="field"><label>KM personales</label><input id="kPers" class="input" type="number" step="0.1" min="0"/></div>
+      <div class="field"><label>Precio/litro (€)</label><input id="kPrice" class="input" type="number" step="0.01" min="0"/></div>
+      <div class="field"><label>Total km coche (acum.)</label><input id="kTotal" class="input" type="number" step="1" min="0" placeholder="Odómetro"/></div>
+    </div>
+    <div class="row" style="margin-top:10px">
+      <button id="btnAddKm" class="btn primary">➕ Guardar</button>
+      <button id="btnMonth" class="btn">Mes actual</button>
+    </div>
+  </section>
+
+  <section class="card">
+    <div class="row" style="justify-content:space-between">
+      <strong>Movimientos KMs</strong>
+      <span id="kmLabel" class="badge"></span>
+    </div>
+    <div id="kmList" class="list" style="margin-top:10px"></div>
+  </section>
+
+  <section class="card">
+    <strong>Logs</strong>
+    <pre id="out" class="mono" style="max-height:240px;overflow:auto"></pre>
+  </section>
+</main>
+
+<script>
+const $=id=>document.getElementById(id);
+const log=m=>{ const out=$('out'); out.textContent += (typeof m==='string'?m:JSON.stringify(m,null,2))+"\\n"; };
+
+auth.onAuthStateChanged(u=>{ if(u) defaultSet(); });
+function defaultSet(){
+  $('kDate').value = new Date().toISOString().slice(0,10);
+  $('kmLabel').textContent = new Date().toISOString().slice(0,7);
+  refresh();
+}
+
+function monthRange(ym){ const s=new Date(ym+'-01T00:00:00'); const e=new Date(s.getFullYear(), s.getMonth()+1, 1); return [s,e]; }
+async function listKm(ym, uid){
+  const [s,e]=monthRange(ym);
+  const snap=await db.collection(`users/${uid}/kms`).where('date','>=',s).where('date','<',e).orderBy('date','desc').get();
+  return snap.docs.map(d=>({id:d.id,...d.data()}));
+}
+
+async function refresh(){
+  const u=auth.currentUser; if(!u) return;
+  const ym=new Date().toISOString().slice(0,7);
+  const arr=await listKm(ym,u.uid);
+  const list=$('kmList'); list.innerHTML='';
+  for(const k of arr){
+    const d=k.date?.toDate?k.date.toDate():new Date(k.date);
+    const div=document.createElement('div'); div.className='item';
+    div.innerHTML=`
+      <div class="left">
+        <p><strong>${k.destination||'-'} </strong> <small class="muted">· ${d.toISOString().slice(0,10)}</small></p>
+        <small>Empresa: ${k.km_emp||0} km · Personal: ${k.km_pers||0} km · ${(Number(k.km_pers||0)*Number(k.price_per_liter||0)).toFixed(2)} €</small>
+      </div>
+      <div><span class="badge">Odo: ${k.km_total||'-'}</span></div>`;
+    list.appendChild(div);
+  }
+}
+
+$('btnMonth').onclick = refresh;
+
+$('btnAddKm').onclick = async ()=>{
+  try{
+    const u=auth.currentUser; if(!u) return alert('Login');
+    const d=$('kDate').value||new Date().toISOString().slice(0,10);
+    const rec={
+      date:new Date(d),
+      destination:$('kDest').value.trim(),
+      km_emp:Number($('kEmp').value||0),
+      km_pers:Number($('kPers').value||0),
+      price_per_liter:Number($('kPrice').value||0),
+      km_total:Number($('kTotal').value||0),
+      ym:d.slice(0,7)
+    };
+    await db.collection(`users/${u.uid}/kms`).add(rec);
+    alert('KM guardado ✅'); refresh();
+  }catch(e){ console.error(e); log(e); alert('Error: '+(e.message||'')); }
+};
+</script>
 </body>
 </html>
